tests/req041/manifests/02-grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: rhcl-grafana
spec:
  hostnames:
    - ${GRAFANA_HOSTNAME}
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: rhcl-apps-gateway
      namespace: openshift-ingress
  rules:
    - backendRefs:
        - name: rhcl-grafana-service
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
